@@ -15,6 +15,13 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+
+Fix lamp-related issues.
+ common/map.c: don't clear FLAG_APPLY for lamps, as it indicates on/off.
+ server/apply.c: lamps don't change apply status when being 'unapplied'.
+ types/lamp/lamp.c: lamps can only be (un)applied when in inventory. 
+Nicolas Weeger 2007-06-02
+
 common/object.c: simplify insert_ob_in_ob when merging. Correctly update the light.
 Nicolas Weeger 2007-06-02
 
